--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -20,6 +20,7 @@ button {
   background: $main-color;
   color: white;
   font-size: 1vw;
+  font-weight: normal;
   transition: background-color 0.3s linear;
 }
 
