--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -62,6 +62,19 @@
   color: white;
 }
 
+.form-home {
+  padding: 5%;
+  margin: 5%;
+  min-width: 80px;
+  min-height: 25px;
+  border-radius: 7px;
+  border: purple solid 1px;
+}
+
+.form-home:focus {
+  outline: 0;
+}
+
 .shoppingCart {
   background-color: white;
   z-index: 200;
@@ -97,6 +110,43 @@
   top: 20px;
 }
 
+.formAddProduct {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.formAddProduct div {
+  margin: 5%;
+  width: 15vw;
+}
+
+.pos-relative {
+  position: relative;
+  display: grid;
+  align-content: start;
+}
+
+.effect-green {
+  border: 0;
+  border-bottom: 1px solid #ccc;
+}
+
+.effect-green ~ .focus-border {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 2px;
+  background-color: purple;
+  transition: 0.4s;
+}
+
+.effect-green:focus ~ .focus-border {
+  width: 100%;
+  transition: 0.4s;
+}
+
 body {
   font-family: "Raleway", sans-serif;
   text-align: center;
@@ -120,17 +170,8 @@ button:hover {
   color: purple;
 }
 
-input, select, option {
-  padding: 5%;
-  margin: 5%;
-  min-width: 50px;
-  min-height: 25px;
-  border-radius: 7px;
-  border: purple solid 1px;
-}
-
-input:focus, select:focus, option:focus {
-  outline: 0;
+:focus {
+  outline: none;
 }
 
 @media only screen and (max-width: 700px) {
