CURD - list of products, adding it to context

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,6 +4,7 @@
 @import "components/cartItem";
 @import "components/home";
 @import "components/addProduct";
+@import "components/crud";
 
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
 
