--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -147,6 +147,10 @@
   transition: 0.4s;
 }
 
+.crudListTable table, .crudListTable tr, .crudListTable td {
+  border: 1px solid black;
+}
+
 body {
   font-family: "Raleway", sans-serif;
   text-align: center;
