--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -6,6 +6,7 @@
 @import "components/addProduct";
 @import "components/crud";
 @import "components/productCards";
+@import "components/navigation";
 
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
 body {
