--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -1,6 +1,20 @@
 .navigation-links {
+
+  width: 100%;
   height: 70px;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  background-color: $main-color;
+  a {
+    text-decoration: none;
+    font-size: clamp(17px, 1.5vw, 25px);
+    transition: font-size 0.5s ease;
+    color: #ECEFF1;
+  }
+  a:hover {
+    font-size: clamp(21px, 2vw, 30px);
+
+  }
 }
+
