--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -96,7 +96,8 @@
   position: fixed;
   z-index: 5;
   right: 20px;
-  top: 20px;
+  top: 15px;
+  font-size: 1.5vw;
 }
 
 .formAddProduct {
@@ -219,10 +220,21 @@
 }
 
 .navigation-links {
+  width: 100%;
   height: 70px;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  background-color: purple;
+}
+.navigation-links a {
+  text-decoration: none;
+  font-size: clamp(17px, 1.5vw, 25px);
+  transition: font-size 0.5s ease;
+  color: #ECEFF1;
+}
+.navigation-links a:hover {
+  font-size: clamp(21px, 2vw, 30px);
 }
 
 body {
