Gallery on the home page

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,2 +1,13 @@
 $main-color: purple;
 $main-color-brighter: lighten($main-color, 10%);
+
+
+
+//background photos
+$parallax-height: 1000px;
+$center-margin: 0px auto;
+
+$parallax-height: 1000px;
+$center-margin: 0px auto;
+$theme: #2e3738;
+
