--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -92,14 +92,6 @@
   width: 20%;
 }
 
-.cart-open {
-  position: fixed;
-  z-index: 5;
-  right: 20px;
-  top: 15px;
-  font-size: 1.5vw;
-}
-
 .formAddProduct {
   display: flex;
   justify-content: center;
@@ -220,6 +212,9 @@
 }
 
 .navigation-links {
+  position: fixed;
+  top: 0;
+  z-index: 50;
   width: 100%;
   height: 70px;
   display: flex;
@@ -227,14 +222,63 @@
   align-items: center;
   background-color: purple;
 }
-.navigation-links a {
+.navigation-links a, .navigation-links div {
   text-decoration: none;
   font-size: clamp(17px, 1.5vw, 25px);
   transition: font-size 0.5s ease;
   color: #ECEFF1;
 }
-.navigation-links a:hover {
+.navigation-links a:hover, .navigation-links div:hover {
   font-size: clamp(21px, 2vw, 30px);
+}
+
+.noFutureGallery {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10vmin;
+  overflow: hidden;
+  transform: skew(5deg);
+}
+.noFutureGallery .card {
+  flex: 1;
+  transition: all 1s ease-in-out;
+  height: 75vmin;
+  position: relative;
+  color: white;
+}
+.noFutureGallery .card .cardHead {
+  background: purple;
+  padding: 0.5em;
+  transform: rotate(-90deg);
+  transform-origin: 0 0;
+  transition: all 0.5s ease-in-out;
+  min-width: 100%;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  font-size: 1em;
+  white-space: nowrap;
+}
+.noFutureGallery .card:hover {
+  flex-grow: 10;
+}
+.noFutureGallery .card:hover .cardHead {
+  text-align: center;
+  top: calc(100% - 2em);
+  color: white;
+  font-size: 2em;
+  transform: rotate(0deg) skew(-5deg);
+}
+.noFutureGallery .card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: all 1s ease-in-out;
+}
+.noFutureGallery .card:not(:nth-child(5)) {
+  margin-right: 1em;
 }
 
 body {
