--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -7,8 +7,13 @@
 @import "components/crud";
 @import "components/productCards";
 @import "components/navigation";
+@import "components/about";
 
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
+
+
+
+
 body {
   font-family: 'Raleway', sans-serif;
   text-align: center;
