--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -92,6 +92,47 @@
   width: 20%;
 }
 
+#first {
+  background: url("../../images/boys.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+#second {
+  background: url("../../images/happy_dude.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+#first, #second {
+  width: 100%;
+  height: 800px;
+  perspective: 1px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  transform: translateZ(-1px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: purple;
+}
+#first div, #second div {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  color: purple;
+  padding: 1%;
+}
+#first p, #second p {
+  font-size: 4vw;
+  background-color: rgba(255, 255, 255, 0.6);
+  padding: 2%;
+}
+
 .formAddProduct {
   display: flex;
   justify-content: center;
@@ -143,47 +184,6 @@
 .crudListTable table th, .crudListTable table td {
   border: 1px solid black;
   padding: 1%;
-}
-
-#first {
-  background: url("../../images/boys.jpg") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-#second {
-  background: url("../../images/happy_dude.jpg") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-#first, #second {
-  width: 100%;
-  height: 800px;
-  perspective: 1px;
-  overflow-x: hidden;
-  overflow-y: auto;
-  transform: translateZ(-1px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: purple;
-}
-#first div, #second div {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  color: purple;
-  padding: 1%;
-}
-#first p, #second p {
-  font-size: 4vw;
-  background-color: rgba(255, 255, 255, 0.6);
-  padding: 2%;
 }
 
 .price-slider {
@@ -245,10 +245,10 @@
   transition: all 1s ease-in-out;
   height: 75vmin;
   position: relative;
-  color: white;
 }
 .noFutureGallery .card .cardHead {
   background: purple;
+  color: #ECEFF1;
   padding: 0.5em;
   transform: rotate(-90deg);
   transform-origin: 0 0;
@@ -267,7 +267,6 @@
 .noFutureGallery .card:hover .cardHead {
   text-align: center;
   top: calc(100% - 2em);
-  color: white;
   font-size: 2em;
   transform: rotate(0deg) skew(-5deg);
 }
@@ -277,14 +276,12 @@
   object-fit: cover;
   transition: all 1s ease-in-out;
 }
-.noFutureGallery .card:not(:nth-child(5)) {
-  margin-right: 1em;
-}
 
 body {
   font-family: "Raleway", sans-serif;
   text-align: center;
   font-size: 0.8vw;
+  margin-top: 70px;
 }
 body h4 {
   font-size: 1.2vw;
