--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -18,6 +18,7 @@ body {
   font-family: 'Raleway', sans-serif;
   text-align: center;
   font-size: 0.8vw;
+  margin-top: 70px;
   h4 {
     font-size: 1.2vw;
   }
