--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -277,6 +277,68 @@
   transition: all 1s ease-in-out;
 }
 
+#third {
+  background: url("../../images/boys2.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  width: 100%;
+  height: 300px;
+  perspective: 1px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  transform: translateZ(-1px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: purple;
+}
+
+.contact-background {
+  background-color: purple;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 30px;
+}
+.contact-background img {
+  height: 70px;
+}
+.contact-background div {
+  margin: 5%;
+}
+.contact-background a {
+  color: white;
+}
+
+.contact-box {
+  background: url("../../images/Ewa.jpg") no-repeat center #eee;
+  background-size: 100%;
+  display: flex;
+  padding: 5%;
+  border: 1px solid purple;
+  justify-content: space-between;
+}
+
+.contactForm {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  font-size: 15px;
+  color: purple;
+  background-color: rgba(255, 255, 255, 0.6);
+  padding: 5%;
+}
+.contactForm div input, .contactForm textarea, .contactForm button {
+  width: 300px;
+  height: 30px;
+  margin-bottom: 5%;
+  border: 1px solid purple;
+}
+
 body {
   font-family: "Raleway", sans-serif;
   text-align: center;
@@ -285,6 +347,10 @@ body {
 }
 body h4 {
   font-size: 1.2vw;
+}
+
+a {
+  text-decoration: none;
 }
 
 button {
