--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -8,6 +8,8 @@
 @import "components/productCards";
 @import "components/navigation";
 @import "components/about";
+@import "components/shop";
+@import "components/contact";
 
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
 
@@ -24,6 +26,9 @@ body {
   }
 }
 
+a {
+  text-decoration: none;
+}
 
 button {
   border: none ;
