--- a/src/styles/components/addProduct.scss
+++ b/src/styles/components/addProduct.scss
@@ -1,37 +1,25 @@
 .formAddProduct {
   display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  align-items: center;
- div{
-   margin: 5%;
-   width: 15vw;
- }
+  flex-direction: column;
+  text-align: left;
+  font-size: 15px;
+  color: $main-color;
+  background-color: rgba(255,255,255,.9);
+  padding: 5%;
+  div input, textarea, button {
+    width: 300px;
+    height: 30px;
+    margin-bottom: 5%;
+    border: 1px solid $main-color;
+  }
+
 }
 
-.pos-relative {
-  position: relative;
-  display: grid;
-  align-content: start;
+.addProductBox {
+  background: url("../../images/addProductForm.jpg") no-repeat center #eee;
+  background-size:100%;
+  display: flex;
+  padding: 5%;
+  border: 1px solid $main-color;
+  justify-content: space-between;
 }
-
-.effect-green {
-  border: 0;
-  border-bottom: 1px solid #ccc;
-}
-
-.effect-green ~ .focus-border {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 0;
-  height: 2px;
-  background-color: $main-color;
-  transition: 0.4s;
-}
-
-.effect-green:focus ~ .focus-border {
-  width: 100%;
-  transition: 0.4s;
-}
-
