--- a/src/styles/components/cartItem.scss
+++ b/src/styles/components/cartItem.scss
@@ -2,6 +2,11 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+  button {
+    max-height: 50%;
+    margin: 5%;
+  }
 
   img {
     max-height: 100px;
