--- a/src/styles/components/crud.scss
+++ b/src/styles/components/crud.scss
@@ -1,17 +1,42 @@
-.crudListTable  {
+.crudInformation {
+  background-color: $main-color;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 30px;
+  padding: 3%;
+}
+
+.crudListTable {
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 2%;
+  background-color: rgba(255, 255, 255, .9);
 
-  table{
-    max-width: 30%;
-    border: 1px solid black;
+  table {
     font-size: 1vw;
+    margin: 2%;
+
     th, td {
       border: 1px solid black;
       padding: 1%;
     }
+    th {
+      background-color: $main-color;
+      color: white;
+    }
   }
+}
 
+.addProductBox {
+  background: url("../../images/addProductForm.jpg") no-repeat center #eee;
+  height: 100%;
+  background-size:100%;
+  display: flex;
+  padding: 5%;
+  border: 1px solid $main-color;
+  justify-content: space-between;
 }
