--- a/src/styles/components/about.scss
+++ b/src/styles/components/about.scss
@@ -14,7 +14,6 @@
     .cardHead {
       background: $main-color;
       color: #ECEFF1;
-
       padding: 0.5em;
       transform: rotate(-90deg);
       transform-origin: 0 0;
@@ -45,4 +44,8 @@
     }
 
   }
+}
+
+@media only screen and (max-width: 700px) {
+
 }
