--- a/src/styles/components/contact.scss
+++ b/src/styles/components/contact.scss
@@ -17,7 +17,7 @@
 }
 
 .contact-box {
-  background: url("../../images/about1.jpeg") no-repeat center;
+  background: url("../../images/about1.jpeg") repeat center;
   background-position: 0 0;
   background-size:100%;
   display: flex;
@@ -43,3 +43,7 @@
 
 }
 
+
+@media only screen and (max-width: 700px) {
+
+}
