--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -64,6 +64,11 @@
   color: white;
 }
 
+@media only screen and (max-width: 700px) {
+  .product-card button {
+    font-size: 3vw;
+  }
+}
 .shoppingCart {
   background-color: white;
   z-index: 200;
@@ -71,6 +76,11 @@
   font-size: 1vw;
 }
 
+@media only screen and (max-width: 700px) {
+  .shoppingCart {
+    font-size: 3vw;
+  }
+}
 .cartItem {
   display: flex;
   flex-direction: row;
@@ -139,6 +149,11 @@
   padding: 2%;
 }
 
+@media only screen and (max-width: 700px) {
+  #first, #second {
+    height: 200px;
+  }
+}
 .formAddProduct {
   display: flex;
   flex-direction: column;
@@ -158,7 +173,6 @@
 .crudInformation {
   background-color: purple;
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   color: white;
@@ -172,6 +186,7 @@
   justify-content: center;
   margin: 2%;
   background-color: rgba(255, 255, 255, 0.9);
+  min-width: 500px;
 }
 .crudListTable table {
   font-size: 1vw;
@@ -187,15 +202,21 @@
 }
 
 .addProductBox {
-  background: url("../../images/addProductForm.jpg") no-repeat center #eee;
+  background: url("../../images/addProductForm.jpg") repeat center #eee;
   height: 100%;
   background-size: 100%;
   display: flex;
+  flex-wrap: wrap;
   padding: 5%;
   border: 1px solid purple;
   justify-content: space-between;
 }
 
+@media only screen and (max-width: 700px) {
+  .addProductBox {
+    justify-content: center;
+  }
+}
 .price-slider {
   width: 50%;
 }
@@ -324,7 +345,7 @@
 }
 
 .contact-box {
-  background: url("../../images/about1.jpeg") no-repeat center;
+  background: url("../../images/about1.jpeg") repeat center;
   background-position: 0 0;
   background-size: 100%;
   display: flex;
@@ -409,11 +430,16 @@ button:hover {
 }
 
 @media only screen and (max-width: 700px) {
-  body {
-    font-size: 2.5vw;
+  body, th, td {
+    font-size: 10px;
   }
-  body h3 {
-    font-size: 3vw;
+  body h3, th h3, td h3 {
+    font-size: 20px;
+  }
+}
+@media print {
+  a[href^=http]:after {
+    content: " (" attr(href) ")";
   }
 }
 
