--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -80,10 +80,17 @@ button:hover {
 
 
 @media only screen and (max-width: 700px) {
-  body {
-    font-size: 2.5vw;
+  body, th, td {
+    font-size: 10px;
     h3 {
-      font-size: 3vw;
+      font-size: 20px;
     }
+  }
+}
+
+
+@media print {
+  a[href^="http"]:after {
+    content: " (" attr(href) ")";
   }
 }
