Updated to Firebase v9

--- a/src/styles/components/contact.scss
+++ b/src/styles/components/contact.scss
@@ -17,8 +17,7 @@
 }
 
 .contact-box {
-  background: url("../../images/about1.jpeg") repeat center;
-  background-position: 0 0;
+  background: url("../../images/about1.jpeg") repeat 0 0;
   background-size:100%;
   display: flex;
   padding: 10%;
