--- a/src/styles/components/addProduct.scss
+++ b/src/styles/components/addProduct.scss
@@ -6,6 +6,7 @@
   color: $main-color;
   background-color: rgba(255,255,255,.9);
   padding: 5%;
+  border: 1px solid $main-color;
   div input, textarea, button {
     width: 300px;
     height: 30px;
