adding authentication forms

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,6 +10,9 @@
 @import "components/about";
 @import "components/shop";
 @import "components/contact";
+@import "components/login";
+@import "components/register";
+@import "components/reset";
 
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
 
