--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -160,7 +160,6 @@
   text-align: left;
   font-size: 15px;
   color: purple;
-  background-color: rgba(255, 255, 255, 0.9);
   padding: 5%;
   border: 1px solid purple;
 }
@@ -259,6 +258,9 @@
 }
 .navigation-links a:hover, .navigation-links div:hover {
   font-size: clamp(21px, 2vw, 30px);
+}
+.navigation-links p {
+  color: white;
 }
 
 .noFutureGallery {
@@ -365,6 +367,92 @@
   height: 30px;
   margin-bottom: 5%;
   border: 1px solid purple;
+}
+
+.login {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.login__container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: #dcdcdc;
+  padding: 30px;
+}
+
+.login__textBox {
+  padding: 10px;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.login__google {
+  background-color: #4285f4;
+}
+
+.login div {
+  margin-top: 7px;
+}
+
+.register {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.register__container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: #dcdcdc;
+  padding: 30px;
+}
+
+.register__textBox {
+  padding: 10px;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.register__google {
+  background-color: #4285f4;
+}
+
+.register div {
+  margin-top: 7px;
+}
+
+.reset {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.reset__container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: #dcdcdc;
+  padding: 30px;
+}
+
+.reset__textBox {
+  padding: 10px;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.reset div {
+  margin-top: 7px;
 }
 
 body {
