--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -258,9 +258,11 @@
 }
 .navigation-links a:hover, .navigation-links div:hover {
   font-size: clamp(21px, 2vw, 30px);
+  cursor: pointer;
 }
 .navigation-links p {
   color: white;
+  font-size: clamp(17px, 1.5vw, 25px);
 }
 
 .noFutureGallery {
