--- a/src/styles/components/contact.scss
+++ b/src/styles/components/contact.scss
@@ -5,12 +5,15 @@
   align-items: center;
   color: white;
   font-size: 30px;
+
   img {
     height: 70px;
   }
+
   div {
     margin: 2%;
   }
+
   a {
     color: white;
   }
@@ -18,7 +21,7 @@
 
 .contact-box {
   background: url("../../images/about1.jpeg") repeat 0 0;
-  background-size:100%;
+  background-size: 100%;
   display: flex;
   padding: 10%;
   border: 1px solid $main-color;
@@ -31,8 +34,9 @@
   text-align: left;
   font-size: 15px;
   color: $main-color;
-  background-color: rgba(255,255,255,.6);
+  background-color: rgba(255, 255, 255, .6);
   padding: 5%;
+
   div input, textarea, button {
     width: 300px;
     height: 30px;
