--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,15 +33,16 @@
 }
 .product-card img {
   object-fit: contain;
-  max-height: 130px;
-  max-width: 230px;
+  max-height: 210px;
+  max-width: 300px;
   width: auto;
   height: auto;
   padding: 5%;
-  transition: max-height 1s linear;
+  transition: max-height 0.5s linear;
 }
 .product-card img:hover {
-  max-height: 250px;
+  max-height: 400px;
+  padding: 0;
 }
 .product-card div:nth-child(1) {
   background-color: purple;
@@ -199,6 +200,9 @@
 .crudListTable table th {
   background-color: purple;
   color: white;
+}
+.crudListTable table img {
+  max-height: 70px;
 }
 
 .addProductBox {
