--- a/src/styles/components/productCard.css
+++ b/src/styles/components/productCard.css
@@ -1,3 +1,17 @@
+/* Error: Undefined variable.
+ *    ,
+ * 51 |     background-color: $main-color;
+ *    |                       ^^^^^^^^^^^
+ *    '
+ *   productCard.scss 51:23  root stylesheet */
 
-
-/*# sourceMappingURL=productCard.css.map */
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined variable.\a    \2577 \a 51 \2502      background-color: $main-color;\a    \2502                        ^^^^^^^^^^^\a    \2575 \a   productCard.scss 51:23  root stylesheet";
+}
