--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,10 @@
 $main-color: purple;
 $main-color-brighter: lighten($main-color, 10%);
 
-
+//$light-font-color: black;
+//$light-background-color: white;
+//$dark-font-color: white;
+//$dark-background-color: black;
 
 //background photos
 $parallax-height: 1000px;
