--- a/src/styles/components/addProduct.scss
+++ b/src/styles/components/addProduct.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   text-align: left;
+  min-width: 310px;
   font-size: 15px;
   color: $main-color;
   padding: 5%;
