--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 .select-options {
   margin: 3%;
   display: flex;
@@ -32,37 +35,39 @@
   overflow: hidden;
 }
 .product-card img {
-  object-fit: contain;
-  max-height: 210px;
-  max-width: 300px;
-  width: auto;
-  height: auto;
-  padding: 5%;
-  transition: max-height 0.5s linear;
+  transition: all linear 0.5s;
 }
 .product-card img:hover {
-  max-height: 400px;
-  padding: 0;
+  transform: scale(1.2);
 }
 .product-card div:nth-child(1) {
   background-color: purple;
   display: flex;
+  padding: 10px;
   justify-content: center;
   align-items: center;
   color: white;
 }
-.product-card div:nth-child(4) {
+.product-card div:nth-child(3) {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   background-color: purple;
   position: absolute;
   bottom: 0;
+  padding: 10px;
+  width: 100%;
 }
-.product-card div:nth-child(4) div {
+.product-card div:nth-child(3) div {
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
+  font-size: 1.1vw;
+}
+.product-card div:nth-child(3) button:hover {
+  background-color: purple;
+  color: white;
+  font-weight: bold;
 }
 
 @media only screen and (max-width: 700px) {
@@ -127,7 +132,7 @@
 
 #first, #second {
   width: 100%;
-  height: 800px;
+  height: 600px;
   perspective: 1px;
   overflow-x: hidden;
   overflow-y: auto;
@@ -159,6 +164,7 @@
   display: flex;
   flex-direction: column;
   text-align: left;
+  min-width: 310px;
   font-size: 15px;
   color: purple;
   padding: 5%;
@@ -465,6 +471,7 @@ body {
   font-family: "Raleway", sans-serif;
   text-align: center;
   font-size: 0.8vw;
+  min-font-size: 33px;
   margin-top: 70px;
 }
 body h4 {
