--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import "variables";
 @import "components/productCard";
 @import "components/cart";
@@ -17,12 +21,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
 
 
-
-
 body {
   font-family: 'Raleway', sans-serif;
   text-align: center;
   font-size: 0.8vw;
+  min-font-size: 33px;
   margin-top: 70px;
   h4 {
     font-size: 1.2vw;
