--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -488,12 +488,11 @@ button {
   color: white;
   font-size: 1vw;
   font-weight: normal;
-  transition: background-color 0.3s linear;
+  transition: filter 0.3s linear;
 }
 
 button:hover {
-  background: white;
-  color: purple;
+  filter: brightness(140%);
 }
 
 :focus {
