--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -42,12 +42,11 @@ button {
   color: white;
   font-size: 1vw;
   font-weight: normal;
-  transition: background-color 0.3s linear;
+  transition: filter 0.3s linear;
 }
 
 button:hover {
-  background: white;
-  color: $main-color;
+  filter: brightness(140%);
 }
 
 
