--- a/src/styles/components/crud.scss
+++ b/src/styles/components/crud.scss
@@ -23,6 +23,10 @@
     th, td {
       border: 1px solid black;
       padding: 1%;
+      min-width: 20px;
+      button {
+        margin: 5px;
+      }
     }
     th {
       background-color: $main-color;
