--- a/src/styles/components/home.scss
+++ b/src/styles/components/home.scss
@@ -18,7 +18,7 @@
   @include parallax-background("../../images/happy_dude.jpg");
 }
 
-#first, #second {
+#second {
   width: 100%;
   height: 600px;
   perspective: 1px;
@@ -37,13 +37,8 @@
     color: $main-color;
     padding: 1%;
   }
-
-  p {
-    font-size: 4vw;
-    background-color: rgba(255,255,255,.6);
-    padding: 2%;
-  }
 }
+
 
 @media only screen and (max-width: 700px) {
   #first, #second {
