--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -17,6 +17,8 @@
 @import "components/login";
 @import "components/register";
 @import "components/reset";
+@import "components/noFutureWelcome";
+@import "components/contact2";
 
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
 
@@ -24,11 +26,11 @@
 body {
   font-family: 'Raleway', sans-serif;
   text-align: center;
-  font-size: 0.8vw;
+  font-size: 13px;
   min-font-size: 33px;
   margin-top: 70px;
   h4 {
-    font-size: 1.2vw;
+    font-size: 15vw;
   }
 }
 
@@ -40,9 +42,12 @@ button {
   border: none ;
   background: $main-color;
   color: white;
-  font-size: 1vw;
+  font-size: 13px;
   font-weight: normal;
   transition: filter 0.3s linear;
+  padding: 5px;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 button:hover {
@@ -87,9 +92,7 @@ button:hover {
 @media only screen and (max-width: 700px) {
   body, th, td {
     font-size: 10px;
-    h3 {
-      font-size: 20px;
-    }
+
   }
 }
 
